src/test/ui/borrowck/regions-escape-unboxed-closure.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/regions-escape-unboxed-closure.rs:6:32
   |
LL |     let mut x: Option<&isize> = None;
   |         ----- borrowed data cannot be stored into here...
LL |     with_int(&mut |y| x = Some(y));
   |                   ---          ^ cannot be stored outside of its closure
   |                   |
   |                   ...because it cannot outlive this closure

error: aborting due to previous error

